<resources>
    <string name="app_name">Feature Sheet Generator</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_data_input">DataInputActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="propertyPrice">Price</string>
    <string name="next">Next</string>
    <string name="price">Price</string>
    <string name="pick_image_from_gallery">Pick image from Gallery</string>
    <string name="capture_image">Capture image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
</resources>
